--- a/index.html
+++ b/index.html
@@ -1,2 +1,39 @@
-Hello world!
-test
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>----タイトル----</title>
+<link rel="stylesheet" href="style.css" type="text/css">
+</head>
+<body>
+<!-- ▼全体の囲み▼ -->
+<div id="wrapper">
+
+<!-- ▼ヘッダ▼ -->
+<header>
+<div class="header-inner">
+<!-- サイト名 -->
+<h1><a href="index2.html">SITE NAME</a></h1>
+</div>
+</header><!-- ▲ヘッダ▲ -->
+
+<!-- ▼メイン▼ -->
+<div id="contents">
+
+<p>
+注意書きとか必要であればここに。<br>
+これは使わないでダイレクトにindex2.htmlに<br>
+アクセスするようにしちゃっても大丈夫です。
+</p>
+
+<br><br><a href="index2.html">ENTER<br>
+<img src="image/banner200.gif" width="200" height="40" alt="banner"></a>
+
+</div><!-- ▲メイン▲ -->
+
+</div><!-- ▲全体の囲み▲ -->
+
+</body>
+</html>
