--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>----タイトル----</title>
+<title>Natsumushiiro&#39;s Room</title>
 <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
@@ -15,7 +15,7 @@
 <header>
 <div class="header-inner">
 <!-- サイト名 -->
-<h1><a href="index2.html">SITE NAME</a></h1>
+<h1><a href="index2.html">Natsumushiiro's Room</a></h1>
 </div>
 </header><!-- ▲ヘッダ▲ -->
 
@@ -23,10 +23,10 @@
 <div id="contents">
 
 <p>
-注意書きとか必要であればここに。<br>
-これは使わないでダイレクトにindex2.htmlに<br>
-アクセスするようにしちゃっても大丈夫です。
+    作成したフリーソフトを公開するためのページです。
 </p>
+    <p>
+        下のENTER下の画像をクリックしてください。</p>
 
 <br><br><a href="index2.html">ENTER<br>
 <img src="image/banner200.gif" width="200" height="40" alt="banner"></a>
