--- a/software.html
+++ b/software.html
@@ -39,17 +39,27 @@
 <!-- ▼メイン▼ -->
 <div id="contents">
 
-<h2>はじめに</h2>
-
-当サイトはフリーソフトの公開サイトです。ソフトの利用前に使用許諾書の内容を確認してからご利用ください。<br>
-
-<h3>更新履歴</h3>
+<h2><span>S</span>oftware</h2>
+<h3>about</h3>
 
 <dl>
-<dt>2022.07.05</dt>
-<dd>新規公開</dd>
-<dt></dt>
-<dd></dd>
+<dt>MASTER:</dt>
+<dd>NAME</dd>
+
+<dt>SITE NAME:</dt>
+<dd>SITE NAME</dd>
+
+<dt>URL:</dt>
+<dd>http://</dd>
+
+<dt>BANNER:(200*40)</dt>
+<dd>
+<img src="image/banner200.gif" width="200" height="40" alt="banner">
+<img src="image/banner88.gif" width="88" height="31" alt="banner">
+<img src="image/banner32.gif" width="32" height="32" alt="banner"> 
+</dd>
+<dd><input size="20" type="text" name="200*40" value="***"></dd>
+
 </dl>
 
 </div><!-- ▲メイン▲ -->
