Software download url added

--- a/software.html
+++ b/software.html
@@ -42,23 +42,16 @@
 <h2><span>S</span>oftware</h2>
 <h3>about</h3>
 
+    CopipeLauncherはtext boxで指定されたディレクトリやファイルを開くことを目的に開発しました。
+    直接メール等にファイル添付せずに、サーバ上のファイルのロケーションを指定して通知されるケースで有用です。
+    また、プラグインを利用して指定された文字列から他のプログラムを起動することも可能です。
+
 <dl>
-<dt>MASTER:</dt>
-<dd>NAME</dd>
+<dt>SoftwareName:</dt>
+<dd>CopipeLauncher</dd>
 
-<dt>SITE NAME:</dt>
-<dd>SITE NAME</dd>
-
-<dt>URL:</dt>
-<dd>http://</dd>
-
-<dt>BANNER:(200*40)</dt>
-<dd>
-<img src="image/banner200.gif" width="200" height="40" alt="banner">
-<img src="image/banner88.gif" width="88" height="31" alt="banner">
-<img src="image/banner32.gif" width="32" height="32" alt="banner"> 
-</dd>
-<dd><input size="20" type="text" name="200*40" value="***"></dd>
+<dt>Download:</dt>
+<dd>https://natsumushiiro.github.io/CopipeLauncher/CopipeLauncher.zip</dd>
 
 </dl>
 
