download link fixed

--- a/software.html
+++ b/software.html
@@ -51,7 +51,7 @@
 <dd>CopipeLauncher</dd>
 
 <dt>Download:</dt>
-<dd>https://natsumushiiro.github.io/CopipeLauncher/CopipeLauncher.zip</dd>
+<dd><a href="https://natsumushiiro.github.io/CopipeLauncher/CopipeLauncher.zip" target="_blank">Download Link</a></dd>
 
 </dl>
 
